--- a/playbook/imagebuild.yaml
+++ b/playbook/imagebuild.yaml
@@ -2,7 +2,7 @@
 - hosts: localhost
   gather_facts: no
   tasks:
-    - name: Build an image and push it to a private repo
+    - name: Build an image and push it to a repo
       community.docker.docker_image:
         build:
           path: ./dockerimage
@@ -12,3 +12,5 @@
         push: yes
         repository: paomb/example-app
         source: build
+
+    - name: d
